--- a/index.html
+++ b/index.html
@@ -240,124 +240,60 @@
     <!--==========================
       Schedule Section
     ============================-->
-    <section id="schedule" class="section-with-bg">
+    
+     <section id="schedule" class="section-with-bg">
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h2>Stands</h2>
-          <!--<p>Here is our event schedule</p>-->
+          <p></p>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Qui expose?</a>
-          </li>
+           <!-- <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">--><details><summary><strong>Qui expose?</strong>  </summary>Les fournisseurs, fabricants, distributeurs et intégrateurs de matières premières, composants, équipements et solutions</details> 
+          </li> <br>
           <li class="nav-item">
-            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Qui visite?</a>
-          </li>
+            <!--<a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>--><details><summary><strong>Qui visite?</strong> </summary>Les fournisseurs, fabricants, distributeurs et intégrateurs de matières premières, composants, équipements et solutions</details> 
+          </li> <br>
           <li class="nav-item">
-            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Pourquoi exposer?</a>
-          </li>
+            <!--<a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>--><details><summary><strong>Pourquoi exposer?</strong> </summary> 
+              <p>*Rejoignez toute la communauté réunie en un seul lieu !</p>
+              <p>*Générez de nouvelles prises de contacts avec des détenteurs et intégrateurs</p>
+              <p>*Profitez de l’unique événement spécialiste dédié aux FabLabs.</p>
+              <p>*Bénéficiez des multiples opportunités pour échanger et toucher des cibles spécifiques</p></details> 
+          </li><br>
           <li class="nav-item">
-            <a class="nav-link" href="#day-4" role="tab" data-toggle="tab">Devenez exposant</a>
-          </li>
+            <!--<a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>--><details><summary><strong>Devenez exposant</strong> </summary> 
+              veuillez compléter le formulaire et le renvoyer par email Email : 
+festivalfablab@usms.ma «Formulaire de demande de stand pour les exposants industriels
+</p></details> 
+          </li><br>
         </ul>
 
-      <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
+        <!--<h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
           necessitatibus voluptatem quis labore perspiciatis quia.</h3>-->
 
-       <div class="tab-content row justify-content-center">
+        <div class="tab-content row justify-content-center">
 
-         <!--- Schdule Day 1 -->
+          <!-- Schdule Day 1 
           <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
-            <!--<div class="row schedule-item">
-              <div class="col-md-2"><time></time></div>
-              <div class="col-md-10">
-                <h4></h4>
-                <p></p>
-              </div>
-            </div>
 
            <div class="row schedule-item">
-              <div class="col-md-2"><time></time></div>
+              <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">-->
-                <!--</div>
-                <h4> <span></span></h4>
-                <p></p>
+                <h4>Registration</h4>
+                <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>11:00 AM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
-                </div>
-                <h4>Les fournisseurs,fabricants, distributeurs et intégrateurs de matières premières, composants, équipements et solutions
-                  <span>Hubert Hirthe</span>--></h4>
-               <!---- <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>-->
-              </div>
-            </div>
-
-         <!-- div class="row schedule-item">
-              <div class="col-md-2"><time>12:00 AM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/3.jpg" alt="Cole Emmerich">
-                </div>
-                <h4>Les fabricants <span>Cole Emmerich</span>--></h4>
-               <!--- <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
-              </div>
-            </div>-->
-
-          <!--- <div class="row schedule-item">
-              <div class="col-md-2"><time>02:00 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/4.jpg" alt="Jack Christiansen">
-                </div>-->
-               <!-- <h4>Les distributeurs <span>Jack Christiansen</span>--></h4>
-               <!--- <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>->
-              </div>
-            </div>
-
-              <div class="row schedule-item">
-              <div class="col-md-2"><time>03:00 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/5.jpg" alt="Alejandrin Littel">
-                </div>-->
-                <!--<h4>Les intégrateurs <span>Alejandrin Littel</span>--></h4>
-              <!--- <p>Eligendi quo eveniet est nobis et ad temporibus odio quo.</p>-->
-            <!---  </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>04:00 PM</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/6.jpg" alt="Willow Trantow">
-                </div>
-                <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
-                <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
-              </div>
-            </div>-->
-
-         <!--- </div>-->
-          <!-- End Schdule Day 1 -->
-
-          <!-- Schdule Day 2 -->
-         <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
-
-           <!--- <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
+                <h4>Keynote <span>Brenden Legros</span></h4>
                 <p>Facere provident incidunt quos voluptas.</p>
               </div>
             </div>
@@ -367,10 +303,9 @@
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
-                </div>-->
-                <h4>Les fournisseurs, fabricants, distributeurs et intégrateurs de matières premières, composants, équipements et solutions
-                  <span>Hubert Hirthe</span></h4>
-               <!--- <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                </div>
+                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
+                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
               </div>
             </div>
 
@@ -418,11 +353,83 @@
               </div>
             </div>
 
-          </div>-->
-          <!-- End Schdule Day 2 -->
+          </div>
+          End Schdule Day 1 -->
 
-          <!-- Schdule Day 3 -->
-        <!--  <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <!-- Schdule Day 2 
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>10:00 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                </div>
+                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
+                <p>Facere provident incidunt quos voluptas.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>11:00 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
+                </div>
+                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
+                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>12:00 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/3.jpg" alt="Cole Emmerich">
+                </div>
+                <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
+                <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>02:00 PM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/4.jpg" alt="Jack Christiansen">
+                </div>
+                <h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
+                <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>03:00 PM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/5.jpg" alt="Alejandrin Littel">
+                </div>
+                <h4>Quos ratione neque expedita asperiores. <span>Alejandrin Littel</span></h4>
+                <p>Eligendi quo eveniet est nobis et ad temporibus odio quo.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>04:00 PM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="img/speakers/6.jpg" alt="Willow Trantow">
+                </div>
+                <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
+                <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
+              </div>
+            </div>
+
+          </div>
+           End Schdule Day 2 -->
+
+          <!-- Schdule Day 3 
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
@@ -444,17 +451,16 @@
                 <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
                 <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
               </div>
-            </div>-->
+            </div>
 
-          <div class="row schedule-item">
-            <!---  <div class="col-md-2"><time>12:00 AM</time></div>-->
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>12:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                 <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros">-->
+                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
                 </div>
-                <h4>Les fournisseurs, fabricants, distributeurs et intégrateurs de matières premières, composants, équipements et solutions
-                  <!--<span>Brenden Legros</span>--></h4>
-                <!--<p>Facere provident incidunt quos voluptas.</p>
+                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
+                <p>Facere provident incidunt quos voluptas.</p>
               </div>
             </div>
 
@@ -491,8 +497,8 @@
               </div>
             </div>
 
-          </div>-->
-          <!-- End Schdule Day 2 -->
+          </div>
+          End Schdule Day 2 -->
 
         </div>
 
